# Parsinator

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  main.cpp  parser.h  parser.hpp
.cache/clangd/index/: main.cpp.D82252B70D87037D.idx  parser.cc.D3615FF722C4FF42.idx  parser.hpp.7761FB647DE96400.idx
tests/: CMakeLists.txt  parser_test.cpp
